@@ -1,170 +1,70 @@
 package br.edu.ifg.projetopraticoweb.controller;
 
 import br.edu.ifg.projetopraticoweb.dto.TaskDTO;
-import br.edu.ifg.projetopraticoweb.enum_data.Status;
 import br.edu.ifg.projetopraticoweb.exception.ResourceNotFoundException;
-import br.edu.ifg.projetopraticoweb.model.Project;
 import br.edu.ifg.projetopraticoweb.model.Task;
 import br.edu.ifg.projetopraticoweb.model.User;
-import br.edu.ifg.projetopraticoweb.service.ProjectService;
 import br.edu.ifg.projetopraticoweb.service.TaskService;
 import br.edu.ifg.projetopraticoweb.service.UserService;
-import jakarta.ws.rs.*;
-import jakarta.ws.rs.core.MediaType;
-import jakarta.ws.rs.core.Response;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContextHolder;
+import br.edu.ifg.projetopraticoweb.mapper.TaskMapper;
+import br.edu.ifg.projetopraticoweb.validator.TaskDTOValidator;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.modelmapper.ModelMapper;
+import org.springframework.web.bind.annotation.*;
 
-import java.net.URI;
-import java.time.LocalDate;
-import java.time.format.DateTimeFormatter;
-import java.time.format.DateTimeParseException;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Controller
-@Path("/tasks")
+@RequestMapping("/tasks")
 public class TaskController {
 
     private final TaskService taskService;
-    private final ProjectService projectService;
     private final UserService userService;
-    private final ModelMapper modelMapper;
+    private final TaskMapper taskMapper;
 
-    public TaskController(TaskService taskService, ProjectService projectService, UserService userService, ModelMapper modelMapper) {
+    public TaskController(TaskService taskService, UserService userService, TaskMapper taskMapper) {
         this.taskService = taskService;
-        this.projectService = projectService;
         this.userService = userService;
-        this.modelMapper = modelMapper;
+        this.taskMapper = taskMapper;
     }
 
-    @GET
-    @Produces(MediaType.TEXT_HTML)
+    // Exibe a lista de tarefas na página Thymeleaf
+    @GetMapping("/list")
     public String listTasks(Model model) {
         User user = userService.getAuthenticatedUser();
         List<TaskDTO> tasks = taskService.findAllByUser(user).stream()
-                .map(this::convertToTaskDTO)
-                .collect(Collectors.toList());
+                .map(taskMapper::toDTO)
+                .toList();
         model.addAttribute("tasks", tasks);
-        return "task-list";
+        return "task/list";
     }
 
-    @GET
-    @Path("/create")
-    @Produces(MediaType.TEXT_HTML)
+    @GetMapping("/{id}")
+    public String getTaskById(@PathVariable("id") Long id, Model model) {
+        Task task = taskService.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Tarefa não encontrada com o ID " + id));
+        model.addAttribute("task", task);
+        return "task/detail";  // Renderiza a página task-detail.html
+    }
+
+    // Exibe o formulário de criação de tarefa
+    @GetMapping("/new")
     public String showCreateForm(Model model) {
         model.addAttribute("task", new TaskDTO());
-        return "task-create";
+        return "task/create";
     }
 
-    @POST
-    @Path("/create")
-    @Consumes(MediaType.APPLICATION_FORM_URLENCODED)
-    @Produces(MediaType.TEXT_HTML)
-    public Response createTask(@BeanParam TaskDTO taskDTO, Model model) {
-        return getResponse(taskDTO, model);
-    }
-
-    private Response getResponse(@BeanParam TaskDTO taskDTO, Model model) {
-        if (!isValid(taskDTO)) {
-            model.addAttribute("task", new TaskDTO());
-            return Response.status(Response.Status.BAD_REQUEST).entity("Dados inválidos").build();
-        }
-
-        try {
-            Task task = convertToTask(taskDTO);
-            taskService.save(task);
-            return Response.seeOther(URI.create("/tasks/")).build();
-        } catch (ResourceNotFoundException e) {
-            model.addAttribute("error", e.getMessage());
-            model.addAttribute("task", new TaskDTO());
-            return Response.status(Response.Status.NOT_FOUND).build();
-        }
-    }
-
-    @GET
-    @Path("/edit/{id}")
-    @Produces(MediaType.TEXT_HTML)
-    public String showEditForm(@PathParam("id") Long id, Model model) {
+    // Exibe o formulário de edição de tarefa
+    @GetMapping("/edit/{id}")
+    public String showEditForm(@PathVariable("id") Long id, Model model) {
         Optional<Task> task = taskService.findById(id);
         if (task.isPresent()) {
-            model.addAttribute("task", convertToTaskDTO(task.get()));
-            return "task-edit";
+            model.addAttribute("task", taskMapper.toDTO(task.get()));
+            return "task/edit";
         } else {
-            return "redirect:/tasks/";
+            return "redirect:/tasks";
         }
-    }
-
-    @PUT
-    @Path("/update")
-    @Consumes(MediaType.APPLICATION_FORM_URLENCODED)
-    @Produces(MediaType.TEXT_HTML)
-    public Response updateTask(@BeanParam TaskDTO taskDTO, Model model) {
-        return getResponse(taskDTO, model);
-    }
-
-    @DELETE
-    @Path("/delete/{id}")
-    @Produces(MediaType.TEXT_HTML)
-    public Response deleteTask(@PathParam("id") Long id) {
-        taskService.delete(id);
-        return Response.seeOther(URI.create("/tasks/")).build();
-    }
-
-    private Project findProjectById(Long projectId) {
-        return projectService.findById(projectId)
-                .orElseThrow(() -> new ResourceNotFoundException("Projeto não encontrado."));
-    }
-
-    private Task convertToTask(TaskDTO taskDTO) {
-        Task task = modelMapper.map(taskDTO, Task.class);
-        task.setUser(userService.getAuthenticatedUser());
-        task.setProject(findProjectById(taskDTO.getProjectId()));
-        task.setDeadline(LocalDate.parse(taskDTO.getDeadline(), DateTimeFormatter.ofPattern("yyyy-MM-dd")));
-        task.setStatus(Status.valueOf(taskDTO.getStatus()));
-        return task;
-    }
-
-    private TaskDTO convertToTaskDTO(Task task) {
-        TaskDTO taskDTO = modelMapper.map(task, TaskDTO.class);
-        taskDTO.setProjectId(task.getProject().getId());
-        taskDTO.setStatus(task.getStatus().getDescription());
-        taskDTO.setDeadline(task.getDeadline().toString());
-        return taskDTO;
-    }
-
-    private boolean isValid(TaskDTO taskDTO) {
-        // Verificação do título não ser nulo ou vazio
-        if (taskDTO.getTitle() == null || taskDTO.getTitle().trim().isEmpty()) {
-            return false;
-        }
-
-        // Verificação do comprimento da descrição não exceder 2000 caracteres
-        if (taskDTO.getDescription() != null && taskDTO.getDescription().length() > 2000) {
-            return false;
-        }
-
-        // Verificação do formato da data de vencimento
-        try {
-            DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
-            LocalDate.parse(taskDTO.getDeadline(), formatter);
-        } catch (DateTimeParseException e) {
-            return false;
-        }
-
-        // Verificação do status ser um dos valores permitidos usando o enum
-        try {
-            Status.fromDescription(taskDTO.getStatus());
-        } catch (IllegalArgumentException e) {
-            return false;
-        }
-
-        // Verificação do projectId ser positivo
-        return taskDTO.getProjectId() != null && taskDTO.getProjectId() > 0;
     }
 
 }
